--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ select {
     color: #ffa6ec;
     opacity: .95;
     pointer-events: none;
+
 }
 
 table {
@@ -61,6 +62,7 @@ td {
     max-width: 250px;
     max-height: 250px;
     border-left: var(--border-style);
+    cursor: pointer;
 }
 
 td:first-of-type { 
