fix image for pages
Co-authored-by: Noah Kise <noah@kisefamily.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-image: url(/img/asphalt.jpeg);
+    background-image: url(../img/asphalt.jpeg);
     background-size: cover;
     box-sizing: border-box;
 }
